--- a/style.css
+++ b/style.css
@@ -19,3 +19,14 @@
   background-color: #ddd;
   color: black;
 }
+p {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  letter-spacing: 2px;
+  word-spacing: 2px;
+  font-weight: normal;
+  text-decoration: none;
+  font-style: normal;
+  font-variant: normal;
+  text-transform: none;
+}
