--- a/style.css
+++ b/style.css
@@ -30,9 +30,12 @@ p {
   font-variant: normal;
   text-transform: none;
 }
+
 body {
-  background-color: #85bb65;
+  background-image: url("https://raw.githubusercontent.com/TKDKid1000/tkdkid1000.github.io/master/head.png");
+  background-size: 100% 100%;
 }
+
 h1, h2, h3, h4, h5, h6 {
   font-family: Arial, Helvetica, sans-serif;
   letter-spacing: 2px;
