--- a/style.css
+++ b/style.css
@@ -31,10 +31,9 @@ p {
   text-transform: none;
 }
 
-body::before {
+body {
   background-image: url("https://raw.githubusercontent.com/TKDKid1000/tkdkid1000.github.io/master/head.png");
   background-size: 100% 100%;
-  opacity: 0.5;
 }
 
 h1, h2, h3, h4, h5, h6 {
