--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
-/* Add a black background color to the top navigation */
 .topnav {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  letter-spacing: 2px;
+  word-spacing: 2px;
   background-color: #333;
   overflow: hidden;
 }
 
-/* Style the links inside the navigation bar */
 .topnav a {
   float: left;
   color: #f2f2f2;
@@ -14,11 +16,16 @@
   font-size: 17px;
 }
 
-/* Change the color of links on hover */
 .topnav a:hover {
   background-color: #ddd;
   color: black;
+  text-decoration: none;
 }
+.topnav a:active {
+  background-color: #523d89;
+  text-decoration: solid;
+}
+
 p {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 15px;
@@ -29,6 +36,28 @@ p {
   font-style: normal;
   font-variant: normal;
   text-transform: none;
+  color: #343440;
+}
+
+a {
+  color: cyan;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  letter-spacing: 2px;
+  word-spacing: 2px;
+  font-weight: normal;
+  text-decoration: none;
+  font-style: normal;
+  font-variant: normal;
+  text-transform: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+a:active {
+  color: red;
 }
 
 body {
