--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ p {
   font-style: normal;
   font-variant: normal;
   text-transform: none;
-  color: #343440;
+  color: #c5c3e3;
 }
 
 a {
@@ -57,7 +57,7 @@ a:hover {
 }
 
 a:active {
-  color: red;
+  color: darkblue;
 }
 
 body {
@@ -69,7 +69,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: Arial, Helvetica, sans-serif;
   letter-spacing: 2px;
   word-spacing: 2px;
-  color: #000000;
+  color: darkcyan;
   font-weight: normal;
   text-decoration: none;
   font-style: normal;
