Added raw button and updated css

--- a/style.css
+++ b/style.css
@@ -42,6 +42,14 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: none;
 }
 
+.edit {
+  color: #161b22;
+  text-align: right;
+}
+.edit p {
+  background-color: #21262d;
+}
+
 input[type=submit], button {
   background-color: #14bbc7;
   border: none;
