--- a/style.css
+++ b/style.css
@@ -238,7 +238,7 @@ input[type=text]:focus, input[type=password]:focus, input[type=email]:focus, inp
   @media screen and (max-width: 600px) {
     .topnav.responsive {position: relative;}
     .topnav.responsive .icon {
-      position: absolute;
+      position: fixed;
       right: 0;
       top: 0;
     }
