--- a/style.css
+++ b/style.css
@@ -228,7 +228,9 @@ input[type=text]:focus, input[type=password]:focus, input[type=email]:focus, inp
   }
   
   @media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {display: none;}
+    .topnav a:not(:first-child) {
+      display: none;
+    }
     .topnav a.icon {
       float: right;
       display: block;
@@ -236,7 +238,9 @@ input[type=text]:focus, input[type=password]:focus, input[type=email]:focus, inp
   }
   
   @media screen and (max-width: 600px) {
-    .topnav.responsive {position: relative;}
+    .topnav.responsive {
+      position: fixed;
+    }
     .topnav.responsive .icon {
       position: fixed;
       right: 0;
