--- a/style.css
+++ b/style.css
@@ -259,9 +259,11 @@ input[type=text]:focus, input[type=password]:focus, input[type=email]:focus, inp
   width: 50px;
   position: fixed;
   right: 0vw;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: gray;
-  transition: width 1s;
+  transition: width 0.5s;
   border-style: solid;
   border-width: 3px;
   background-color: black;
